# http-client-brread-timeout

./: Changelog.md  LICENSE  README.md  http-client-brread-timeout.cabal  nginx.conf
.github/workflows/: ci.yml
Network/HTTP/Client/: BrReadWithTimeout.hs
test/: cabal.project  test.cabal  test.hs
