cabal-version:          2.4

name:                   test
version:                0.0.1.0
synopsis:               Test Http client with time-limited brRead
description:            Test Http client with time-limited brRead
author:                 Alexey Radkov <alexey.radkov@gmail.com>
maintainer:             Alexey Radkov <alexey.radkov@gmail.com>
copyright:              2025 Alexey Radkov

executable test
  default-language:     Haskell2010
  build-depends:        base >= 4.8 && < 5
                      , http-client >= 0.5.0
                      , http-client-brread-timeout
                      , http-types
                      , HUnit >= 1.6.1.0
                      , bytestring

  main-is:              test.hs

  ghc-options:         -Wall

